2008-10-02  Zoltan Varga  <vargaz@gmail.com>

	* aot-compiler.c (emit_exception_debug_info): Use jinfo->used_regs instead of
	cfg->used_int_regs, since the two are different on arm.

2008-10-02  Mark Probst  <mark.probst@gmail.com>

	* method-to-ir.c, inssel.brg, mini-trampolines.c: Use
	mono_method_get_vtable_index() to get the vtable index.

2008-10-02  Mark Probst  <mark.probst@gmail.com>

	* method-to-ir.c (mono_method_to_ir2): Don't create native
	wrappers for array methods, because they're never called (and if
	they were called they wouldn't work).

2008-10-02  Mark Probst  <mark.probst@gmail.com>

	* method-to-ir.c (mono_method_to_ir2): Array methods are
	special-cased and must not be invoked indirectly via the (M)RGCTX
	when generic sharing is turned on.  Fixes #431413.

2008-10-01  Mark Probst  <mark.probst@gmail.com>

	* method-to-ir.c: When generic sharing is active, call
	non-interface virtual generic methods via the standard trampoline.

	* mini-trampolines.c: Handle virtual generic shared methods.

	* mini.h, mini-x86.c, mini-x86.h: New argument for
	mono_arch_build_imt_thunk() which is non-NULL for virtual generic
	method thunks and which is the trampoline to call if the lookup
	fails.  Enable the virtual generic method thunk for x86.

	* mini-amd64.c, mini-arm.c, mini-ia64.c, mini-sparc.c,
	mini-ppc.c (mono_arch_build_imt_thunk): Add the additional
	argument but assert that it's NULL, because these archs don't yet
	implement the virtual generic method thunk.  Changes in the IMT
	thunk data structures.

2008-10-01  Zoltan Varga  <vargaz@gmail.com>

	* aot-compiler.c (emit_globals): Avoid invalid characters in
	the static linking symbol.

	* objects.cs: Add a test for the range check optimization. Fix warnings.

	* branch-opts.c (mono_if_conversion): Add back the 'optimize range checks'
	optimization from the current JIT.

	* method-to-ir.c (mini_emit_inst_for_method): Decompose String.Length