@@ -1,3 +1,7 @@
+2008-10-03  Zoltan Varga  <vargaz@gmail.com>
+
+	* method-to-ir.c: Remove unused includes.
+
 2008-10-02  Zoltan Varga  <vargaz@gmail.com>
 
 	* aot-compiler.c (emit_exception_debug_info): Use jinfo->used_regs instead of
